[tool.poetry]
name = "mlflow-docker"
version = "0.0.1"
description = ""
authors = ["Civitaspo <civitaspo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mlflow = "^1.0"
certifi = "2019.3.9"

[tool.poetry.dev-dependencies]
black = "19.3b0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
